# nes-emu

./: .gitignore  .rustfmt.toml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  imgui.ini
include/: Bus.h  CPU.h  Cartridge.h  InstructionWidget.h  MenuWidget.h  NES.h  PPU.h  RamWidget.h  StatusWidget.h  WindowManager.h  types.h  util.h
include/GUI/: Image.h  InstructionWidget.h  OAMWidget.h  PatternTableWidget.h  RamWidget.h  ScreenWidget.h  StatusWidget.h  Widget.h  WindowManager.h
include/Mappers/: Mapper.h  Mapper_000.h
meta/: build.sh
src/: Bus.cpp  CMakeLists.txt  CPU.cpp  Cartridge.cpp  NES.cpp  PPU.cpp  main.cpp  main.rs
src/GUI/: Image.cpp  InstructionWidget.cpp  MenuWidget.cpp  OAMWidget.cpp  PatternTableWidget.cpp  RamWidget.cpp  ScreenWidget.cpp  StatusWidget.cpp  Widget.cpp  WindowManager.cpp
src/Mappers/: Mapper.cpp  Mapper_000.cpp
src/gui/: display.rs  mod.rs
src/nes/: bus.rs  cartridge.rs  controller.rs  cpu.rs  dma.rs  mappers.rs  mod.rs  ppu.rs  ram.rs
tests/: Test3x10.asm
