[package]
name = "nes-emu"
version = "0.1.0"
edition = "2021"
authors = ["Ricardus Severino"]
description = "A NES emulator in Rust"
license = "MIT"
keywords = ["nes", "emulator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
egui_extras = "0.22.0"
anyhow = "1.0.71"
